force-app/main/default/objects/Account/fields/EUIN__c.field-meta.xml
<CustomField>
    <fullName>EUIN__c</fullName>
    <label>EUIN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>