force-app/main/default/objects/Account/fields/EUIN_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>EUIN_Expiry_Date__c</fullName>
    <label>EUIN Expiry Date</label>
    <type>Date</type>
</CustomField>