force-app/main/default/objects/Account/fields/ExpiringWaitingPeriod__c.field-meta.xml
<CustomField>
    <fullName>ExpiringWaitingPeriod__c</fullName>
    <label>Expiring Waiting Period</label>
    <length>100</length>
    <type>Text</type>
</CustomField>