force-app/main/default/objects/Account/fields/Family_Code__c.field-meta.xml
<CustomField>
    <fullName>Family_Code__c</fullName>
    <label>Family Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>