force-app/main/default/objects/Account/fields/Family_Head__c.field-meta.xml
<CustomField>
    <fullName>Family_Head__c</fullName>
    <label>Family Head</label>
    <length>255</length>
    <type>Text</type>
</CustomField>