force-app/main/default/objects/Account/fields/FATCA_Flag__c.field-meta.xml
<CustomField>
    <fullName>FATCA_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FATCA Flag</label>
    <type>Checkbox</type>
</CustomField>