force-app/main/default/objects/Account/fields/Finnone_Customer_No__c.field-meta.xml
<CustomField>
    <fullName>Finnone_Customer_No__c</fullName>
    <inlineHelpText>This field is used to store the finnone customer no</inlineHelpText>
    <label>Finnone Customer No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>