force-app/main/default/objects/Account/fields/Fraud_Status__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Status__c</fullName>
    <label>Fraud Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>....</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>