force-app/main/default/objects/Account/fields/Gross_Net_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Gross_Net_Confirmation__c</fullName>
    <label>Gross/Net Confirmation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>