force-app/main/default/objects/Account/fields/GST_Number_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>GST_Number_Update_Date__c</fullName>
    <description>ABSLI Field</description>
    <label>GST Number Update Date</label>
    <type>Date</type>
</CustomField>