force-app/main/default/objects/Account/fields/Handle_With_Care_HWC__c.field-meta.xml
<CustomField>
    <fullName>Handle_With_Care_HWC__c</fullName>
    <label>Handle With Care(HWC)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>