force-app/main/default/objects/Account/fields/Handle_With_Care_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Handle_With_Care_Indicator__c</fullName>
    <formula>IF( Handle_With_Care_HWC__c  == &apos;Y&apos;, IMAGE(&quot;/resource/ASF_RedFlag&quot;, &quot;red&quot;, 30, 30), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Handle With Care Indicator</label>
    <type>Text</type>
</CustomField>