force-app/main/default/objects/Account/fields/Health_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Health_Card_Number__c</fullName>
    <description>ABHIL Field</description>
    <label>Health Card Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>