force-app/main/default/objects/Account/fields/HNI_Customer__c.field-meta.xml
<CustomField>
    <fullName>HNI_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ABHI Field</description>
    <label>HNI Customer</label>
    <type>Checkbox</type>
</CustomField>