force-app/main/default/objects/Account/fields/IDProof__c.field-meta.xml
<CustomField>
    <fullName>IDProof__c</fullName>
    <label>ID Proof</label>
    <length>100</length>
    <type>Text</type>
</CustomField>