force-app/main/default/objects/Account/fields/IDProofType__c.field-meta.xml
<CustomField>
    <fullName>IDProofType__c</fullName>
    <description>This field is used in Wellness.</description>
    <formula>PAN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID Proof Type</label>
    <type>Text</type>
</CustomField>