force-app/main/default/objects/Account/fields/International_Address__c.field-meta.xml
<CustomField>
    <fullName>International_Address__c</fullName>
    <description>ABHIL Field</description>
    <label>International Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>