force-app/main/default/objects/Account/fields/International_Number__c.field-meta.xml
<CustomField>
    <fullName>International_Number__c</fullName>
    <description>ABHIL Field</description>
    <label>International Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>