force-app/main/default/objects/Account/fields/Is_Chronic__c.field-meta.xml
<CustomField>
    <fullName>Is_Chronic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Chronic</label>
    <type>Checkbox</type>
</CustomField>