force-app/main/default/objects/Account/fields/KYC_Done_Date__c.field-meta.xml
<CustomField>
    <fullName>KYC_Done_Date__c</fullName>
    <description>This field is used to capture the date when KYC was completed</description>
    <label>KYC Done Date</label>
    <type>Date</type>
</CustomField>