force-app/main/default/objects/Account/fields/KYC_Status__c.field-meta.xml
<CustomField>
    <fullName>KYC_Status__c</fullName>
    <label>KYC Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>