force-app/main/default/objects/Account/fields/LAST_LUMPSUM_TRANACTION_DATE__c.field-meta.xml
<CustomField>
    <fullName>LAST_LUMPSUM_TRANACTION_DATE__c</fullName>
    <label>LAST LUMPSUM TRANACTION DATE</label>
    <type>Date</type>
</CustomField>