force-app/main/default/objects/Account/fields/LAST_SIP_SWP_TRANACTION_DATE__c.field-meta.xml
<CustomField>
    <fullName>LAST_SIP_SWP_TRANACTION_DATE__c</fullName>
    <label>LAST SIP/SWP TRANACTION DATE</label>
    <type>Date</type>
</CustomField>