force-app/main/default/objects/Account/fields/Last_Transacted_Broker_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Transacted_Broker_Name__c</fullName>
    <label>Last Transacted Broker Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>