force-app/main/default/objects/Account/fields/Last_Transacted_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Transacted_Date__c</fullName>
    <label>Last Transacted Date</label>
    <type>Date</type>
</CustomField>