force-app/main/default/objects/Account/fields/Last_Update_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Update_Date_Time__c</fullName>
    <label>Last Update Date Time</label>
    <type>DateTime</type>
</CustomField>