force-app/main/default/objects/Account/fields/Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Business__c</fullName>
    <label>Line of Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABHFL</fullName>
            </value>
            <value>
                <fullName>ABFL</fullName>
            </value>
            <value>
                <fullName>Payments</fullName>
            </value>
            <value>
                <fullName>Wealth</fullName>
            </value>
            <value>
                <fullName>Not Classified</fullName>
            </value>
            <value>
                <fullName>ABWM</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
                <isActive>false</isActive>
                <label>Corporate</label>
            </value>
            <value>
                <fullName>Digital</fullName>
                <isActive>false</isActive>
                <label>Digital</label>
            </value>
            <value>
                <fullName>Retail - Secured</fullName>
                <isActive>false</isActive>
                <label>Retail - Secured</label>
            </value>
            <value>
                <fullName>Retail - Unsecured</fullName>
                <isActive>false</isActive>
                <label>Retail - Unsecured</label>
            </value>
            <value>
                <fullName>ABSLI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>