force-app/main/default/objects/Account/fields/LOB_Client_Code__c.field-meta.xml
<CustomField>
    <fullName>LOB_Client_Code__c</fullName>
    <description>This is unique key for all the LOB specific Client Code.</description>
    <externalId>true</externalId>
    <label>LOB+Client Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>