force-app/main/default/objects/Account/fields/Loyalty_Serv_Agent_Branch__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Serv_Agent_Branch__c</fullName>
    <description>ABSLI Advisor&apos;s field</description>
    <label>LoyaltyServAgtBranch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>