force-app/main/default/objects/Account/fields/Loyalty_Serv_Agent_Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Serv_Agent_Branch_Name__c</fullName>
    <description>ABLSI Advisor&apos;s Field</description>
    <label>LoyaltyServAgtBranchNm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>