force-app/main/default/objects/Account/fields/Loyalty_Serv_Agent_Id__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Serv_Agent_Id__c</fullName>
    <description>ABSLI Advisor Field</description>
    <label>LoyaltyServAgtID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>