force-app/main/default/objects/Account/fields/MMI_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>MMI_Customer_ID__c</fullName>
    <description>ABHIL Field</description>
    <label>MMI Customer ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>