force-app/main/default/objects/Account/fields/NACH_Status__c.field-meta.xml
<CustomField>
    <fullName>NACH_Status__c</fullName>
    <label>NACH Status</label>
    <length>25</length>
    <type>Text</type>
</CustomField>