force-app/main/default/objects/Account/fields/Nature_Description_of_the_Business__c.field-meta.xml
<CustomField>
    <fullName>Nature_Description_of_the_Business__c</fullName>
    <description>ABHIL Field</description>
    <label>Nature / Description of the Business</label>
    <length>100</length>
    <type>Text</type>
</CustomField>