force-app/main/default/objects/Account/fields/Nature_Of_Investment__c.field-meta.xml
<CustomField>
    <fullName>Nature_Of_Investment__c</fullName>
    <label>Nature Of Investment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>