force-app/main/default/objects/Account/fields/NBO_Flag__c.field-meta.xml
<CustomField>
    <fullName>NBO_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NBO Flag</label>
    <type>Checkbox</type>
</CustomField>