force-app/main/default/objects/Account/fields/Nearest_Branch__c.field-meta.xml
<CustomField>
    <fullName>Nearest_Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nearest Branch</label>
    <referenceTo>Branch_Master__c</referenceTo>
    <relationshipLabel>Accounts (Nearest Branch)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>