force-app/main/default/objects/Account/fields/Nearest_Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Nearest_Branch_Name__c</fullName>
    <label>Nearest Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>