force-app/main/default/objects/Account/fields/Next_Best_Offer_NBO__c.field-meta.xml
<CustomField>
    <fullName>Next_Best_Offer_NBO__c</fullName>
    <label>Next Best Offer(NBO)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>