force-app/main/default/objects/Account/fields/NISM_21A__c.field-meta.xml
<CustomField>
    <fullName>NISM_21A__c</fullName>
    <label>NISM 21A</label>
    <length>255</length>
    <type>Text</type>
</CustomField>