force-app/main/default/objects/Account/fields/Nominee_1__c.field-meta.xml
<CustomField>
    <fullName>Nominee_1__c</fullName>
    <label>Nominee 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>