force-app/main/default/objects/Account/fields/Nominee_2__c.field-meta.xml
<CustomField>
    <fullName>Nominee_2__c</fullName>
    <label>Nominee 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>