force-app/main/default/objects/Account/fields/Nominee_3__c.field-meta.xml
<CustomField>
    <fullName>Nominee_3__c</fullName>
    <label>Nominee 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>