force-app/main/default/objects/Account/fields/NPO_Flag__c.field-meta.xml
<CustomField>
    <fullName>NPO_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NPO Flag</label>
    <type>Checkbox</type>
</CustomField>