force-app/main/default/objects/Account/fields/NPS_Result__c.field-meta.xml
<CustomField>
    <fullName>NPS_Result__c</fullName>
    <formula>IF( NPS_Score__c &gt;=1  &amp;&amp; NPS_Score__c &lt;=3, &quot;🙁&quot;,  IF(NPS_Score__c &gt;3  &amp;&amp; NPS_Score__c &lt;=6, &quot;😐&quot;,  IF(NPS_Score__c &gt;6  &amp;&amp; NPS_Score__c &lt;=10, &quot;🙂&quot;, null) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPS Result</label>
    <type>Text</type>
</CustomField>