force-app/main/default/objects/Account/fields/Number_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Employees__c</fullName>
    <description>ABHIL Field</description>
    <label>Number of Employees</label>
    <length>100</length>
    <type>Text</type>
</CustomField>