force-app/main/default/objects/Account/fields/Organisation_Type__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Type__c</fullName>
    <label>Organization Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>