force-app/main/default/objects/Account/fields/PAN__c.field-meta.xml
<CustomField>
    <fullName>PAN__c</fullName>
    <description>This field is used to store PAN No.</description>
    <label>PAN No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>