force-app/main/default/objects/Account/fields/PAN_AUM__c.field-meta.xml
<CustomField>
    <fullName>PAN_AUM__c</fullName>
    <label>PAN_AUM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>