force-app/main/default/objects/Account/fields/PAN_Seeding_status__c.field-meta.xml
<CustomField>
    <fullName>PAN_Seeding_status__c</fullName>
    <label>PAN Seeding status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>