force-app/main/default/objects/Account/fields/PAN_Validation_Date__c.field-meta.xml
<CustomField>
    <fullName>PAN_Validation_Date__c</fullName>
    <description>ABSLI Field</description>
    <label>PAN Validation Date</label>
    <type>Date</type>
</CustomField>