force-app/main/default/objects/Account/fields/ParentCode__c.field-meta.xml
<CustomField>
    <fullName>ParentCode__c</fullName>
    <description>It stores Client code of Parent Account</description>
    <label>ParentCode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>