force-app/main/default/objects/Account/fields/Partner_Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>Partner_Branch_Code__c</fullName>
    <description>This field is used in ABSLI to store Advisor Partner Branch. Used in Advisor Communication Module in ABSLI</description>
    <label>Partner Branch Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>