force-app/main/default/objects/Account/fields/PAY_Doing_Business_As__c.field-meta.xml
<CustomField>
    <fullName>PAY_Doing_Business_As__c</fullName>
    <description>This field is used for Merchant record for Payment Line of Business</description>
    <label>Doing Business As</label>
    <length>255</length>
    <type>Text</type>
</CustomField>