force-app/main/default/objects/Account/fields/Payment_Suspended_Flag__c.field-meta.xml
<CustomField>
    <fullName>Payment_Suspended_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Suspended Flag</label>
    <type>Checkbox</type>
</CustomField>