force-app/main/default/objects/Account/fields/PED__c.field-meta.xml
<CustomField>
    <fullName>PED__c</fullName>
    <label>Pre Existing Disease</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>