force-app/main/default/objects/Account/fields/PEDWaitingPeriod__c.field-meta.xml
<CustomField>
    <fullName>PEDWaitingPeriod__c</fullName>
    <label>PED Waiting Period</label>
    <length>100</length>
    <type>Text</type>
</CustomField>