force-app/main/default/objects/Account/fields/Penny_Drop__c.field-meta.xml
<CustomField>
    <fullName>Penny_Drop__c</fullName>
    <label>Penny Drop</label>
    <length>255</length>
    <type>Text</type>
</CustomField>