force-app/main/default/objects/Account/fields/PEP__c.field-meta.xml
<CustomField>
    <fullName>PEP__c</fullName>
    <label>PEP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>