force-app/main/default/objects/Account/fields/Permanent_Addr_Flag__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Addr_Flag__c</fullName>
    <label>Permanent Addr Flag</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OFFICE</fullName>
            </value>
            <value>
                <fullName>PERMANENT</fullName>
            </value>
            <value>
                <fullName>RESIDENTIAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>