force-app/main/default/objects/Account/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <label>Postal_Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>