force-app/main/default/objects/Account/fields/Profile_Completion_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Profile_Completion_Percentage__c</fullName>
    <label>Profile Completion Percentage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>