force-app/main/default/objects/Account/fields/Quip_URL__c.field-meta.xml
<CustomField>
    <fullName>Quip_URL__c</fullName>
    <description>Test field - Please delete</description>
    <label>Quip URL</label>
    <type>Url</type>
</CustomField>