force-app/main/default/objects/Account/fields/Re_KYC_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Re_KYC_Due_Date__c</fullName>
    <label>Re-KYC Due Date</label>
    <type>Date</type>
</CustomField>