force-app/main/default/objects/Account/fields/Registered_on_My_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Registered_on_My_Insurance__c</fullName>
    <description>ABSLI Field</description>
    <label>Registered on My Insurance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>