force-app/main/default/objects/Account/fields/Relationship_Manager_Email_Text__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Manager_Email_Text__c</fullName>
    <label>Relationship Manager Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>