force-app/main/default/objects/Account/fields/Relationship_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Manager_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relationship Manager Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>