force-app/main/default/objects/Account/fields/Rider_Opted__c.field-meta.xml
<CustomField>
    <fullName>Rider_Opted__c</fullName>
    <label>Rider Opted</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>