force-app/main/default/objects/Account/fields/Risk_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Risk_Expiry_Date__c</fullName>
    <description>This field is used to store the risk expiry date</description>
    <label>Risk Expiry Date</label>
    <type>Date</type>
</CustomField>