force-app/main/default/objects/Account/fields/RiskClass__c.field-meta.xml
<CustomField>
    <fullName>RiskClass__c</fullName>
    <label>RiskClass</label>
    <length>255</length>
    <type>Text</type>
</CustomField>