force-app/main/default/objects/Account/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <description>Used for Wellness</description>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Orphan</fullName>
            </value>
            <value>
                <fullName>HNI</fullName>
            </value>
            <value>
                <fullName>Super HNI</fullName>
            </value>
            <value>
                <fullName>Non HNI</fullName>
            </value>
            <value>
                <fullName>Advisor</fullName>
            </value>
            <value>
                <fullName>Business Partners</fullName>
            </value>
            <value>
                <fullName>FIS</fullName>
            </value>
            <value>
                <fullName>PEP</fullName>
            </value>
            <value>
                <fullName>FATCA</fullName>
            </value>
            <value>
                <fullName>NRI</fullName>
            </value>
            <value>
                <fullName>HN</fullName>
                <isActive>false</isActive>
                <label>HN</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>