force-app/main/default/objects/Account/fields/Self_Declaration_status__c.field-meta.xml
<CustomField>
    <fullName>Self_Declaration_status__c</fullName>
    <label>Self Declaration status</label>
    <length>31072</length>
    <type>LongTextArea</type>
</CustomField>