force-app/main/default/objects/Account/fields/Sensitive_Customer__c.field-meta.xml
<CustomField>
    <fullName>Sensitive_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sensitive Customer</label>
    <type>Checkbox</type>
</CustomField>