force-app/main/default/objects/Account/fields/Service_2_Sales_CRE_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Service_2_Sales_CRE_Email_ID__c</fullName>
    <label>Service-2-Sales CRE Email ID</label>
    <type>Email</type>
</CustomField>