force-app/main/default/objects/Account/fields/Service_2_Sales_CRE_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_2_Sales_CRE_Name__c</fullName>
    <label>Service-2-Sales CRE Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>