force-app/main/default/objects/Account/fields/Source_Networth__c.field-meta.xml
<CustomField>
    <fullName>Source_Networth__c</fullName>
    <label>Source_Networth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>