force-app/main/default/objects/Account/fields/Street_Address_3__c.field-meta.xml
<CustomField>
    <fullName>Street_Address_3__c</fullName>
    <label>Street Address 3</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>