force-app/main/default/objects/Account/fields/SumInsured__c.field-meta.xml
<CustomField>
    <fullName>SumInsured__c</fullName>
    <label>Sum Insured</label>
    <length>100</length>
    <type>Text</type>
</CustomField>