force-app/main/default/objects/Account/fields/SuperNcbAmount__c.field-meta.xml
<CustomField>
    <fullName>SuperNcbAmount__c</fullName>
    <label>Super Ncb Amount</label>
    <length>100</length>
    <type>Text</type>
</CustomField>