force-app/main/default/objects/Account/fields/Supervisor_Email__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Email__c</fullName>
    <description>This field is used in ABSLI, in Advisor Communication Module.</description>
    <label>Supervisor Email</label>
    <type>Email</type>
</CustomField>