force-app/main/default/objects/Account/fields/Supervisor_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Mobile_Number__c</fullName>
    <description>This field is used in ABSLI, and in Advisor Communication.</description>
    <label>Supervisor Mobile Number</label>
    <type>Phone</type>
</CustomField>