force-app/main/default/objects/Account/fields/TAN_Number__c.field-meta.xml
<CustomField>
    <fullName>TAN_Number__c</fullName>
    <label>TAN Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>