force-app/main/default/objects/Account/fields/Tax_Status__c.field-meta.xml
<CustomField>
    <fullName>Tax_Status__c</fullName>
    <label>Tax Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>