force-app/main/default/objects/Account/fields/Total_Annual_Premium__c.field-meta.xml
<CustomField>
    <fullName>Total_Annual_Premium__c</fullName>
    <description>ABSLI Field</description>
    <label>Total Annual Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>