force-app/main/default/objects/Account/fields/Total_No_of_Policies__c.field-meta.xml
<CustomField>
    <fullName>Total_No_of_Policies__c</fullName>
    <description>ABSLI Field</description>
    <label>Total No. of Policies</label>
    <length>50</length>
    <type>Text</type>
</CustomField>