force-app/main/default/objects/Account/fields/UBO_Flag__c.field-meta.xml
<CustomField>
    <fullName>UBO_Flag__c</fullName>
    <label>UBO Flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>