force-app/main/default/objects/Account/fields/UpfrontDiscount__c.field-meta.xml
<CustomField>
    <fullName>UpfrontDiscount__c</fullName>
    <label>Upfront Discount</label>
    <length>10</length>
    <type>Text</type>
</CustomField>