force-app/main/default/objects/Account/fields/Verticals__c.field-meta.xml
<CustomField>
    <fullName>Verticals__c</fullName>
    <label>Verticals</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>.</fullName>
            </value>
            <value>
                <fullName>Supply Chain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>