force-app/main/default/objects/Account/fields/VIP_Flag__c.field-meta.xml
<CustomField>
    <fullName>VIP_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is used to identify whether an account has VIP privileges or not</description>
    <label>VIP Flag</label>
    <type>Checkbox</type>
</CustomField>