force-app/main/default/objects/Account/fields/WhatsApp_Opt_in_status__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_Opt_in_status__c</fullName>
    <description>ABSLI Field</description>
    <label>WhatsApp Opt in status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>