force-app/main/default/objects/Account/recordTypes/ABML_Branch.recordType-meta.xml
<RecordType>
    <fullName>ABML_Branch</fullName>
    <active>true</active>
    <label>ABML Branch</label>
</RecordType>