force-app/main/default/objects/Account/recordTypes/ABML_Franchisee.recordType-meta.xml
<RecordType>
    <fullName>ABML_Franchisee</fullName>
    <active>true</active>
    <label>ABML Franchisee</label>
</RecordType>