force-app/main/default/objects/Account/recordTypes/ABSLAMC_Non_Individual_Distributor.recordType-meta.xml
<RecordType>
    <fullName>ABSLAMC_Non_Individual_Distributor</fullName>
    <active>true</active>
    <label>ABSLAMC Non-Individual Distributor</label>
</RecordType>